--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>org.bahmni</groupId>
     <artifactId>reports</artifactId>
     <packaging>war</packaging>
-    <version>0.92-SNAPSHOT</version>
+    <version>0.92.1</version>
 
     <properties>
         <spring.version>4.1.5.RELEASE</spring.version>
